# SamplifierBackend-master

./: Makefile  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
calc-param-files-2020/measures-per-product/: measures_product_line.json
calc-param-files-2020/measures-per-year/: measures_2020.json
calc-param-files-2020/reference-array/: reference_array.csv  reference_array.json
config/: config.ts
documentation/: a_good_place_to_start.md  api_contract.md  how_to_upload_config_files.md  pipeline.md
lib/: api-custom-domain.ts  cognito-samplifier-client.ts  route53-api-config-route.ts  samplifier-app.ts  samplifier-bucket.ts  samplifier-identity-pool.ts  samplifier-rest-api.ts  samplifier-single-table.ts  samplifier-userpool.ts
lib/base/: base-cognito-userpool.ts  node-function.ts
lib/helpers/: ssm-helper.ts
pipeline/: pipeline-stack.ts  pipeline-stage.ts
pipeline/config/: stage-props-config.ts
runtime/: Makefile  _calc_proxy_controller.py  _upload_process.py  _user_proxy_controller.py  pyproject.toml
runtime/domain/: calculator_service.py  dynamodb_utils.py  user_service.py  utils.py
runtime/resources/emails/: account_deleted_email.handlebars
src/node/: package-lock.json  package.json  tsconfig.json
src/node/cognito/: custom-message.ts
stacks/: api-stack.ts  ses-config-stack.ts  storage-calc-stack.ts  userpool-client-cognito.ts  userpool-cognito-stack.ts
tests/: requirements.txt  test_calc.py
tests/flow/: Auth.py
tests/resources/samples/2023/Commercial/: WORKBOOK56776.XML  WORKBOOK96385.XML  WORKBOOK99886.XML
(+13 files in other folders)
